@@ -1101,6 +1101,7 @@ fi
 AC_SUBST(MINIRUBY)
 AC_SUBST(PREP)
 AC_SUBST(RUNRUBY)
+AC_SUBST(EXTOUT, [${EXTOUT-.ext}])
 
 FIRSTMAKEFILE=""
 LIBRUBY_A='lib$(RUBY_SO_NAME)-static.a'
