@@ -1,3 +1,11 @@
+Tue Feb  1 00:19:13 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* Makefile.in, configure.in: made EXTOUT configurable.
+
+	* ext/extmk.rb (extmake), lib/mkmf.rb: keep topdir as relative style.
+
+	* lib/mkmf.rb: make extensions in depth order.  [ruby-dev:25522]
+
 Mon Jan 31 13:16:39 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/extconf.rb: add tkutil configuration step (remove old schema)
@@ -105,7 +113,7 @@ Tue Jan 25 14:05:52 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/lib/tk/menu.rb: bug on treating arguments [ruby-dev:25479]
 
-	* ext/tk/lib/tk.rb: bug fix; cannot accept a callback ID string for 
+	* ext/tk/lib/tk.rb: bug fix; cannot accept a callback ID string for
 	  a command argument [ruby-dev:25479]
 
 	* ext/tk/lib/multi-tk.rb: ditto
